# BoardingProcessSimulator

./: readme.md
Cpp/: .gitignore  CMakeLists.txt  build.bat  readme.md  vcpkg.json
Cpp/src/: main.cpp
python/: simulate.py  temp.ipynb
